@startuml

title __VER5's Class Diagram__\n

  namespace MainCode {
    namespace ClusteringAlgorithm {
      abstract class MainCode.ClusteringAlgorithm.AbstractClustering {
      }
    }
  }
  

  namespace MainCode {
    namespace ClusteringAlgorithm {
      abstract class MainCode.ClusteringAlgorithm.KMAndMSGeneral {
      }
    }
  }
  

  namespace MainCode {
    namespace ClusteringAlgorithm {
      class MainCode.ClusteringAlgorithm.KMeans {
      }
    }
  }
  

  namespace MainCode {
    namespace ClusteringAlgorithm {
      class MainCode.ClusteringAlgorithm.KNearestNeighbor {
      }
    }
  }
  

  namespace MainCode {
    namespace ClusteringAlgorithm {
      class MainCode.ClusteringAlgorithm.MeanShift {
      }
    }
  }
  

  namespace MainCode {
    class MainCode.Controller {
    }
  }
  

  namespace MainCode {
    class MainCode.HelpfullFunction {
    }
  }
  

  namespace MainCode {
    namespace InSetData {
      namespace GenerateNode {
        abstract class MainCode.InSetData.GenerateNode.AbstractGenerateNodes {
        }
      }
    }
  }
  

  namespace MainCode {
    namespace InSetData {
      namespace GenerateNode {
        class MainCode.InSetData.GenerateNode.GenerateCentroids {
        }
      }
    }
  }
  

  namespace MainCode {
    namespace InSetData {
      namespace GenerateNode {
        class MainCode.InSetData.GenerateNode.KMeansGenerateNodes {
        }
      }
    }
  }
  

  namespace MainCode {
    namespace InSetData {
      namespace GenerateNode {
        class MainCode.InSetData.GenerateNode.KNearestNeighborGenerateNodes {
        }
      }
    }
  }
  

  namespace MainCode {
    namespace InSetData {
      namespace GenerateNode {
        class MainCode.InSetData.GenerateNode.MeanShiftGenerateNode {
        }
      }
    }
  }
  

  namespace MainCode {
    namespace InSetData {
      class MainCode.InSetData.Node {
      }
    }
  }
  

  namespace MainCode {
    class MainCode.Launcher {
    }
  }
  

  namespace MainCode {
    class MainCode.Main {
    }
  }
  

  MainCode.ClusteringAlgorithm.KMAndMSGeneral -up-|> MainCode.ClusteringAlgorithm.AbstractClustering
  MainCode.ClusteringAlgorithm.KMeans -up-|> MainCode.ClusteringAlgorithm.KMAndMSGeneral
  MainCode.ClusteringAlgorithm.KNearestNeighbor -up-|> MainCode.ClusteringAlgorithm.AbstractClustering
  MainCode.ClusteringAlgorithm.KNearestNeighbor o-- MainCode.InSetData.Node : centroids
  MainCode.ClusteringAlgorithm.MeanShift -up-|> MainCode.ClusteringAlgorithm.KMAndMSGeneral
  MainCode.Controller .up.|> javafx.fxml.Initializable
  MainCode.Controller o-- MainCode.ClusteringAlgorithm.AbstractClustering : abstractClustering
  MainCode.InSetData.GenerateNode.KMeansGenerateNodes -up-|> MainCode.InSetData.GenerateNode.AbstractGenerateNodes
  MainCode.InSetData.GenerateNode.KNearestNeighborGenerateNodes -up-|> MainCode.InSetData.GenerateNode.AbstractGenerateNodes
  MainCode.InSetData.GenerateNode.MeanShiftGenerateNode -up-|> MainCode.InSetData.GenerateNode.AbstractGenerateNodes
  MainCode.InSetData.Node -up-|> javafx.scene.shape.Circle
  MainCode.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
